[gd_scene load_steps=10 format=3 uid="uid://b50c7navctclb"]

[ext_resource type="Theme" uid="uid://cf5p1g5ho3kg7" path="res://assets/theme/nene_theme.tres" id="1_vivmn"]
[ext_resource type="Script" path="res://ui/setting_panel.gd" id="2_lbp7m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2jjq"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eyvfc"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4m32k"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3j5d"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60onm"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5i4df"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aenvd"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[node name="SettingPanel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vivmn")
script = ExtResource("2_lbp7m")

[node name="Mask" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.333333)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2jjq")

[node name="CloseIcon" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_bottom = 84.0
grow_horizontal = 0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_eyvfc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4m32k")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_y3j5d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_60onm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5i4df")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aenvd")
text = "X"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 16.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "SETTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 96.0
offset_right = -40.0
offset_bottom = -16.0

[node name="SettingList" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Panel/ScrollContainer/SettingList"]
layout_mode = 2

[node name="Sound" type="HBoxContainer" parent="Panel/ScrollContainer/SettingList"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/SettingList/Sound"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "SOUND"

[node name="OffButton" type="CheckButton" parent="Panel/ScrollContainer/SettingList/Sound"]
layout_mode = 2
size_flags_horizontal = 3
keep_pressed_outside = true
text = "OFF"
alignment = 1

[node name="OnButton" type="CheckButton" parent="Panel/ScrollContainer/SettingList/Sound"]
layout_mode = 2
size_flags_horizontal = 3
keep_pressed_outside = true
text = "ON"
alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/SettingList/Sound"]
layout_mode = 2

[node name="BGM" type="HBoxContainer" parent="Panel/ScrollContainer/SettingList"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/SettingList/BGM"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "BGM"

[node name="BGMValue" type="Label" parent="Panel/ScrollContainer/SettingList/BGM"]
custom_minimum_size = Vector2(68, 0)
layout_mode = 2
text = "000"

[node name="VolumeSlider" type="HSlider" parent="Panel/ScrollContainer/SettingList/BGM"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/SettingList/BGM"]
layout_mode = 2

[node name="SE" type="HBoxContainer" parent="Panel/ScrollContainer/SettingList"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/SettingList/SE"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "SE"

[node name="SEValue" type="Label" parent="Panel/ScrollContainer/SettingList/SE"]
custom_minimum_size = Vector2(68, 0)
layout_mode = 2
text = "000"

[node name="VolumeSlider" type="HSlider" parent="Panel/ScrollContainer/SettingList/SE"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/SettingList/SE"]
layout_mode = 2

[node name="Fullscreen" type="HBoxContainer" parent="Panel/ScrollContainer/SettingList"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/SettingList/Fullscreen"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "FullScreen"

[node name="OffButton" type="CheckButton" parent="Panel/ScrollContainer/SettingList/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
keep_pressed_outside = true
text = "OFF"
alignment = 1

[node name="OnButton" type="CheckButton" parent="Panel/ScrollContainer/SettingList/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
keep_pressed_outside = true
text = "ON"
alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/SettingList/Fullscreen"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/ScrollContainer/SettingList"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Exit" type="HBoxContainer" parent="Panel/ScrollContainer/SettingList"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/ScrollContainer/SettingList/Exit"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "EXIT"

[node name="CloseButton" type="Button" parent="Panel/ScrollContainer/SettingList/Exit"]
layout_mode = 2
size_flags_horizontal = 3
text = "EXIT"

[node name="VSeparator" type="VSeparator" parent="Panel/ScrollContainer/SettingList/Exit"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="Panel/ScrollContainer/SettingList"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
